Use Class instead of record
Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>